--- a/src/main/resources/templates/post/detail.html
+++ b/src/main/resources/templates/post/detail.html
@@ -64,12 +64,12 @@ content : <input type="text" id="input_content" /> <br/>
     } else {
       alert("❗ URL에 id가 없습니다.");
     }
-    // let tempHref = location.href;
-    // // http://localhost:8080/post/detail/2
-    // /*let tempLastIndexOf = tempHref.lastIndexOf("/");
+    let tempHref = location.href;
+    // http://localhost:8080/post/detail/2
+    // let tempLastIndexOf = tempHref.lastIndexOf("/");
     // tempHref = tempHref.substring(tempLastIndexOf + 1);
-    // alert(tempHref);*/
-    //
+    // alert(tempHref);
+
     // let tempArray = tempHref.split("/");
     // if(tempArray.length > 0){
     //   tempHref = tempArray[tempArray.length -1];
