--- a/src/main/resources/templates/post/create.html
+++ b/src/main/resources/templates/post/create.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>User Create</title>
+    <title> Post Create</title>
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 </head>
 <body>
 create <br/>
 title : <input type="text" class="input_param" name="title" id="input_title" /> <br/>
 content : <input type="text" class="input_param" name="content" id="input_content" /> <br/>
-<button onclick="create_user()">입력하기!</button>
+<button onclick="create_post()">입력하기!</button>
 
 <script>
-    function create_user(){
+    function create_post(){
 
         let tempParam = {};
         let input_param = $(".input_param");
